--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!--       <img class="img-fluid mb-3 d-block mx-auto" src="img/myProfile.png" alt=""> -->
       <h1 class="text-uppercase mb-0">남서빈</h1>
       <hr class="star-light">
-      <h2 class="font-weight-light mb-0">Web programming - Big data</h2>
+      <h2 class="font-weight-light mb-0">자기소개서></h2>
     </div>
   </header>
 
